--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^7.0.1",
+    "@angular-material-components/moment-adapter": "^7.0.0",
     "@angular/animations": "^12.2.13",
     "@angular/cdk": "^12.2.13",
     "@angular/common": "~12.2.0",
